# Openev

./: .dockerignore  .gitignore  README.md  app.py  inference.py  models.py  openenv.yaml  pyproject.toml
artifacts/: eval_metrics.jsonl  expert_baseline.jsonl  results_summary.json
artifacts/trl-neon-model/: config.json  model.safetensors  training_summary.jsonl
docs/: demo_storyboard.md  game_visualization.html  heist.html  judge.html  judge_flow.md  lab.html  mini_blog.md  pitch_flow.md  play.html  video_script_90s.md  visual_demo.html  walkthrough.html  walkthrough.md
notebooks/: trl_training_colab.ipynb
notebooks/artifacts/trl-neon-model/: .gitkeep  training_summary.jsonl
scripts/: evaluate_and_plot.py  run_full_pipeline.sh
server/: agent.py  app.py  environment.py
training/: train_trl_ppo.py
