[project]
name = "supportops-openenv"
version = "1.0.0"
description = "OpenEnv-compatible multi-agent long-horizon strategy simulation environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.110.0",
	"httpx>=0.27.0",
	"openai>=1.40.0",
	"openenv-core>=0.2.0",
	"pydantic>=2.7.0",
	"python-dotenv>=1.0.1",
	"uvicorn>=0.29.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
training = [
	"accelerate>=0.34.0",
	"matplotlib>=3.8.0",
	"torch>=2.2.0",
	"transformers>=4.44.0",
	"trl>=0.11.0"
]
qlora = [
	"accelerate>=0.34.0",
	"bitsandbytes>=0.43.0",
	"matplotlib>=3.8.0",
	"peft>=0.11.0",
	"torch>=2.2.0",
	"transformers>=4.44.0",
	"trl>=0.11.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"
